# serializer version: 1
# name: test_generate_automation_full_feature_snapshot
  '''
  id: ha_notifications_full_feature
  alias: 'HA Notifications: Full feature'
  description: Generated by HA Notifications. Do not edit manually.
  initial_state: true
  mode: single
  triggers:
  - trigger: state
    entity_id: binary_sensor.door
  - trigger: state
    entity_id: binary_sensor.window
  - trigger: state
    entity_id: sensor.temperature
  - trigger: homeassistant
    event: start
  conditions: []
  actions:
  - choose:
    - conditions:
      - condition: and
        conditions:
        - condition: or
          conditions:
          - condition: state
            entity_id: binary_sensor.door
            state: 'on'
          - condition: numeric_state
            entity_id: sensor.temperature
            above: 30
        - condition: state
          entity_id: binary_sensor.window
          state: 'on'
      sequence:
      - action: ha_notifications.report
        data:
          alert_id: full_feature
          alert_name: Full feature
          flow_id: '{{ context.parent_id or context.id }}'
          status: started
          run_id: '{{ context.parent_id or context.id }}'
          details:
            action: automation_started
      - action: ha_notifications.send
        data:
          alert_id: full_feature
          alert_name: Full feature
          flow_id: '{{ context.parent_id or context.id }}'
          target:
            entity_id:
            - notify.mobile_app_phone
          data:
            message: Door open
            actions:
            - action: ha_notifications_full_feature_confirmation_confirm
              title: Confirm
      - action: logbook.log
        data:
          name: Full feature sent
      - action: ha_notifications.record
        data:
          alert_id: full_feature
          alert_name: Full feature
          flow_id: '{{ context.parent_id or context.id }}'
          details:
            action: logbook.log
      - action: ha_notifications.report
        data:
          alert_id: full_feature
          alert_name: Full feature
          flow_id: '{{ context.parent_id or context.id }}'
          status: waiting
          run_id: '{{ context.parent_id or context.id }}'
          message: Waiting for confirmation
          details:
            action: confirmation_waiting
      - wait_for_trigger:
        - trigger: event
          event_type: mobile_app_notification_action
          event_data:
            action: ha_notifications_full_feature_confirmation_confirm
        timeout:
          minutes: 15
        continue_on_timeout: true
      - action: ha_notifications.report
        data:
          alert_id: full_feature
          alert_name: Full feature
          flow_id: '{{ context.parent_id or context.id }}'
          status: running
          run_id: '{{ context.parent_id or context.id }}'
          message: Confirmation wait finished
          details:
            action: confirmation_resumed
      - choose:
        - conditions:
          - condition: template
            value_template: '{{ wait.trigger is not none }}'
          sequence:
          - action: ha_notifications.send
            data:
              alert_id: full_feature
              alert_name: Full feature
              flow_id: '{{ context.parent_id or context.id }}'
              target:
                entity_id:
                - notify.mobile_app_phone
              data:
                template_message: '{% raw %}Confirmed{% endraw %}'
                confirmation_device_id: '{{ wait.trigger.event.data.device_id | default('''',
                  true) }}'
                confirmation_user_id: '{{ wait.trigger.event.context.user_id | default('''',
                  true) }}'
          - action: light.turn_on
            target:
              entity_id: light.hall
          - action: ha_notifications.record
            data:
              alert_id: full_feature
              alert_name: Full feature
              flow_id: '{{ context.parent_id or context.id }}'
              details:
                action: light.turn_on
          - action: ha_notifications.report
            data:
              alert_id: full_feature
              alert_name: Full feature
              flow_id: '{{ context.parent_id or context.id }}'
              status: confirmation_completed
              run_id: '{{ context.parent_id or context.id }}'
              message: Confirmation completed
              details:
                action: confirmation_completed
                device_id: '{{ wait.trigger.event.data.device_id | default('''', true)
                  }}'
                user_id: '{{ wait.trigger.event.context.user_id | default('''', true)
                  }}'
          - stop: confirmation completed
      - repeat:
          count: 5
          sequence:
          - action: ha_notifications.send
            data:
              alert_id: full_feature
              alert_name: Full feature
              flow_id: '{{ context.parent_id or context.id }}'
              target:
                entity_id:
                - notify.mobile_app_phone
              data:
                message: Door open
                actions:
                - action: ha_notifications_full_feature_confirmation_confirm
                  title: Confirm
              title: Confirmation - Attempt {{ repeat.index + 1 }}/5
          - action: ha_notifications.report
            data:
              alert_id: full_feature
              alert_name: Full feature
              flow_id: '{{ context.parent_id or context.id }}'
              status: confirmation_reminder
              message: Confirmation reminder sent
              details:
                action: confirmation_reminder
                repeat: '{{ repeat.index }}'
          - action: ha_notifications.report
            data:
              alert_id: full_feature
              alert_name: Full feature
              flow_id: '{{ context.parent_id or context.id }}'
              status: waiting
              run_id: '{{ context.parent_id or context.id }}'
              message: Waiting for confirmation
              details:
                action: confirmation_waiting
          - wait_for_trigger:
            - trigger: event
              event_type: mobile_app_notification_action
              event_data:
                action: ha_notifications_full_feature_confirmation_confirm
            timeout:
              minutes: 15
            continue_on_timeout: true
          - action: ha_notifications.report
            data:
              alert_id: full_feature
              alert_name: Full feature
              flow_id: '{{ context.parent_id or context.id }}'
              status: running
              run_id: '{{ context.parent_id or context.id }}'
              message: Confirmation wait finished
              details:
                action: confirmation_resumed
          - choose:
            - conditions:
              - condition: template
                value_template: '{{ wait.trigger is not none }}'
              sequence:
              - action: ha_notifications.send
                data:
                  alert_id: full_feature
                  alert_name: Full feature
                  flow_id: '{{ context.parent_id or context.id }}'
                  target:
                    entity_id:
                    - notify.mobile_app_phone
                  data:
                    template_message: '{% raw %}Confirmed{% endraw %}'
                    confirmation_device_id: '{{ wait.trigger.event.data.device_id |
                      default('''', true) }}'
                    confirmation_user_id: '{{ wait.trigger.event.context.user_id | default('''',
                      true) }}'
              - action: light.turn_on
                target:
                  entity_id: light.hall
              - action: ha_notifications.record
                data:
                  alert_id: full_feature
                  alert_name: Full feature
                  flow_id: '{{ context.parent_id or context.id }}'
                  details:
                    action: light.turn_on
              - action: ha_notifications.report
                data:
                  alert_id: full_feature
                  alert_name: Full feature
                  flow_id: '{{ context.parent_id or context.id }}'
                  status: confirmation_completed
                  run_id: '{{ context.parent_id or context.id }}'
                  message: Confirmation completed
                  details:
                    action: confirmation_completed
                    device_id: '{{ wait.trigger.event.data.device_id | default('''',
                      true) }}'
                    user_id: '{{ wait.trigger.event.context.user_id | default('''',
                      true) }}'
              - stop: confirmation completed
      - action: ha_notifications.report
        data:
          alert_id: full_feature
          alert_name: Full feature
          flow_id: '{{ context.parent_id or context.id }}'
          status: confirmation_timeout
          run_id: '{{ context.parent_id or context.id }}'
          message: Confirmation timed out
          details:
            action: confirmation_timeout
      - action: ha_notifications.report
        data:
          alert_id: full_feature
          alert_name: Full feature
          flow_id: '{{ context.parent_id or context.id }}'
          status: completed
          run_id: '{{ context.parent_id or context.id }}'
          details:
            action: automation_completed
    default:
    - action: ha_notifications.report
      data:
        alert_id: full_feature
        alert_name: Full feature
        flow_id: '{{ context.id }}'
        status: inactive
        message: Condition inactive
        details:
          action: automation_inactive
    - stop: condition inactive
  '''
# ---
# name: test_option_matrix_generates_valid_native_automations[baseline-overrides0]
  '''
  id: ha_notifications_matrix_baseline
  alias: 'HA Notifications: Low water'
  description: Generated by HA Notifications. Do not edit manually.
  initial_state: true
  mode: single
  triggers:
  - trigger: state
    entity_id: sensor.water
  - trigger: homeassistant
    event: start
  conditions: []
  actions:
  - choose:
    - conditions:
      - condition: numeric_state
        entity_id: sensor.water
        below: 20
      sequence:
      - action: ha_notifications.report
        data:
          alert_id: matrix_baseline
          alert_name: Low water
          flow_id: '{{ context.parent_id or context.id }}'
          status: started
          run_id: '{{ context.parent_id or context.id }}'
          details:
            action: automation_started
      - action: ha_notifications.send
        data:
          alert_id: matrix_baseline
          alert_name: Low water
          flow_id: '{{ context.parent_id or context.id }}'
          target:
            entity_id:
            - notify.phone
            - notify.tablet
          data:
            message: Low water
      - action: ha_notifications.report
        data:
          alert_id: matrix_baseline
          alert_name: Low water
          flow_id: '{{ context.parent_id or context.id }}'
          status: completed
          run_id: '{{ context.parent_id or context.id }}'
          details:
            action: automation_completed
    default:
    - action: ha_notifications.report
      data:
        alert_id: matrix_baseline
        alert_name: Low water
        flow_id: '{{ context.id }}'
        status: inactive
        message: Condition inactive
        details:
          action: automation_inactive
    - stop: condition inactive
  '''
# ---
# name: test_option_matrix_generates_valid_native_automations[confirmation_with_bounded_repeat-overrides4]
  '''
  id: ha_notifications_matrix_confirmation_with_bounded_repeat
  alias: 'HA Notifications: Low water'
  description: Generated by HA Notifications. Do not edit manually.
  initial_state: true
  mode: single
  triggers:
  - trigger: state
    entity_id: sensor.water
  - trigger: homeassistant
    event: start
  conditions: []
  actions:
  - choose:
    - conditions:
      - condition: numeric_state
        entity_id: sensor.water
        below: 20
      sequence:
      - action: ha_notifications.report
        data:
          alert_id: matrix_confirmation_with_bounded_repeat
          alert_name: Low water
          flow_id: '{{ context.parent_id or context.id }}'
          status: started
          run_id: '{{ context.parent_id or context.id }}'
          details:
            action: automation_started
      - action: ha_notifications.send
        data:
          alert_id: matrix_confirmation_with_bounded_repeat
          alert_name: Low water
          flow_id: '{{ context.parent_id or context.id }}'
          target:
            entity_id:
            - notify.phone
            - notify.tablet
          data:
            message: Low water
            actions:
            - action: ha_notifications_matrix_confirmation_with_bounded_repeat_confirmation_confirm
              title: Confirm
      - action: ha_notifications.report
        data:
          alert_id: matrix_confirmation_with_bounded_repeat
          alert_name: Low water
          flow_id: '{{ context.parent_id or context.id }}'
          status: waiting
          run_id: '{{ context.parent_id or context.id }}'
          message: Waiting for confirmation
          details:
            action: confirmation_waiting
      - wait_for_trigger:
        - trigger: event
          event_type: mobile_app_notification_action
          event_data:
            action: ha_notifications_matrix_confirmation_with_bounded_repeat_confirmation_confirm
        timeout:
          minutes: 1
        continue_on_timeout: true
      - action: ha_notifications.report
        data:
          alert_id: matrix_confirmation_with_bounded_repeat
          alert_name: Low water
          flow_id: '{{ context.parent_id or context.id }}'
          status: running
          run_id: '{{ context.parent_id or context.id }}'
          message: Confirmation wait finished
          details:
            action: confirmation_resumed
      - choose:
        - conditions:
          - condition: template
            value_template: '{{ wait.trigger is not none }}'
          sequence:
          - action: ha_notifications.send
            data:
              alert_id: matrix_confirmation_with_bounded_repeat
              alert_name: Low water
              flow_id: '{{ context.parent_id or context.id }}'
              target:
                entity_id:
                - notify.phone
                - notify.tablet
              data:
                template_message: '{% raw %}Confirmed{% endraw %}'
                confirmation_device_id: '{{ wait.trigger.event.data.device_id | default('''',
                  true) }}'
                confirmation_user_id: '{{ wait.trigger.event.context.user_id | default('''',
                  true) }}'
          - action: light.turn_on
          - action: ha_notifications.record
            data:
              alert_id: matrix_confirmation_with_bounded_repeat
              alert_name: Low water
              flow_id: '{{ context.parent_id or context.id }}'
              details:
                action: light.turn_on
          - action: ha_notifications.report
            data:
              alert_id: matrix_confirmation_with_bounded_repeat
              alert_name: Low water
              flow_id: '{{ context.parent_id or context.id }}'
              status: confirmation_completed
              run_id: '{{ context.parent_id or context.id }}'
              message: Confirmation completed
              details:
                action: confirmation_completed
                device_id: '{{ wait.trigger.event.data.device_id | default('''', true)
                  }}'
                user_id: '{{ wait.trigger.event.context.user_id | default('''', true)
                  }}'
          - stop: confirmation completed
      - repeat:
          count: 2
          sequence:
          - action: ha_notifications.send
            data:
              alert_id: matrix_confirmation_with_bounded_repeat
              alert_name: Low water
              flow_id: '{{ context.parent_id or context.id }}'
              target:
                entity_id:
                - notify.phone
                - notify.tablet
              data:
                message: Low water
                actions:
                - action: ha_notifications_matrix_confirmation_with_bounded_repeat_confirmation_confirm
                  title: Confirm
          - action: ha_notifications.report
            data:
              alert_id: matrix_confirmation_with_bounded_repeat
              alert_name: Low water
              flow_id: '{{ context.parent_id or context.id }}'
              status: confirmation_reminder
              message: Confirmation reminder sent
              details:
                action: confirmation_reminder
                repeat: '{{ repeat.index }}'
          - action: ha_notifications.report
            data:
              alert_id: matrix_confirmation_with_bounded_repeat
              alert_name: Low water
              flow_id: '{{ context.parent_id or context.id }}'
              status: waiting
              run_id: '{{ context.parent_id or context.id }}'
              message: Waiting for confirmation
              details:
                action: confirmation_waiting
          - wait_for_trigger:
            - trigger: event
              event_type: mobile_app_notification_action
              event_data:
                action: ha_notifications_matrix_confirmation_with_bounded_repeat_confirmation_confirm
            timeout:
              minutes: 1
            continue_on_timeout: true
          - action: ha_notifications.report
            data:
              alert_id: matrix_confirmation_with_bounded_repeat
              alert_name: Low water
              flow_id: '{{ context.parent_id or context.id }}'
              status: running
              run_id: '{{ context.parent_id or context.id }}'
              message: Confirmation wait finished
              details:
                action: confirmation_resumed
          - choose:
            - conditions:
              - condition: template
                value_template: '{{ wait.trigger is not none }}'
              sequence:
              - action: ha_notifications.send
                data:
                  alert_id: matrix_confirmation_with_bounded_repeat
                  alert_name: Low water
                  flow_id: '{{ context.parent_id or context.id }}'
                  target:
                    entity_id:
                    - notify.phone
                    - notify.tablet
                  data:
                    template_message: '{% raw %}Confirmed{% endraw %}'
                    confirmation_device_id: '{{ wait.trigger.event.data.device_id |
                      default('''', true) }}'
                    confirmation_user_id: '{{ wait.trigger.event.context.user_id | default('''',
                      true) }}'
              - action: light.turn_on
              - action: ha_notifications.record
                data:
                  alert_id: matrix_confirmation_with_bounded_repeat
                  alert_name: Low water
                  flow_id: '{{ context.parent_id or context.id }}'
                  details:
                    action: light.turn_on
              - action: ha_notifications.report
                data:
                  alert_id: matrix_confirmation_with_bounded_repeat
                  alert_name: Low water
                  flow_id: '{{ context.parent_id or context.id }}'
                  status: confirmation_completed
                  run_id: '{{ context.parent_id or context.id }}'
                  message: Confirmation completed
                  details:
                    action: confirmation_completed
                    device_id: '{{ wait.trigger.event.data.device_id | default('''',
                      true) }}'
                    user_id: '{{ wait.trigger.event.context.user_id | default('''',
                      true) }}'
              - stop: confirmation completed
      - action: ha_notifications.report
        data:
          alert_id: matrix_confirmation_with_bounded_repeat
          alert_name: Low water
          flow_id: '{{ context.parent_id or context.id }}'
          status: confirmation_timeout
          run_id: '{{ context.parent_id or context.id }}'
          message: Confirmation timed out
          details:
            action: confirmation_timeout
      - action: ha_notifications.report
        data:
          alert_id: matrix_confirmation_with_bounded_repeat
          alert_name: Low water
          flow_id: '{{ context.parent_id or context.id }}'
          status: completed
          run_id: '{{ context.parent_id or context.id }}'
          details:
            action: automation_completed
    default:
    - action: ha_notifications.report
      data:
        alert_id: matrix_confirmation_with_bounded_repeat
        alert_name: Low water
        flow_id: '{{ context.id }}'
        status: inactive
        message: Condition inactive
        details:
          action: automation_inactive
    - stop: condition inactive
  '''
# ---
# name: test_option_matrix_generates_valid_native_automations[confirmation_without_reminders-overrides3]
  '''
  id: ha_notifications_matrix_confirmation_without_reminders
  alias: 'HA Notifications: Low water'
  description: Generated by HA Notifications. Do not edit manually.
  initial_state: true
  mode: single
  triggers:
  - trigger: state
    entity_id: sensor.water
  - trigger: homeassistant
    event: start
  conditions: []
  actions:
  - choose:
    - conditions:
      - condition: numeric_state
        entity_id: sensor.water
        below: 20
      sequence:
      - action: ha_notifications.report
        data:
          alert_id: matrix_confirmation_without_reminders
          alert_name: Low water
          flow_id: '{{ context.parent_id or context.id }}'
          status: started
          run_id: '{{ context.parent_id or context.id }}'
          details:
            action: automation_started
      - action: ha_notifications.send
        data:
          alert_id: matrix_confirmation_without_reminders
          alert_name: Low water
          flow_id: '{{ context.parent_id or context.id }}'
          target:
            entity_id:
            - notify.phone
            - notify.tablet
          data:
            message: Low water
            actions:
            - action: ha_notifications_matrix_confirmation_without_reminders_confirmation_confirm
              title: Confirm
      - action: ha_notifications.report
        data:
          alert_id: matrix_confirmation_without_reminders
          alert_name: Low water
          flow_id: '{{ context.parent_id or context.id }}'
          status: waiting
          run_id: '{{ context.parent_id or context.id }}'
          message: Waiting for confirmation
          details:
            action: confirmation_waiting
      - wait_for_trigger:
        - trigger: event
          event_type: mobile_app_notification_action
          event_data:
            action: ha_notifications_matrix_confirmation_without_reminders_confirmation_confirm
        timeout:
          minutes: 15
        continue_on_timeout: true
      - action: ha_notifications.report
        data:
          alert_id: matrix_confirmation_without_reminders
          alert_name: Low water
          flow_id: '{{ context.parent_id or context.id }}'
          status: running
          run_id: '{{ context.parent_id or context.id }}'
          message: Confirmation wait finished
          details:
            action: confirmation_resumed
      - choose:
        - conditions:
          - condition: template
            value_template: '{{ wait.trigger is not none }}'
          sequence:
          - action: ha_notifications.send
            data:
              alert_id: matrix_confirmation_without_reminders
              alert_name: Low water
              flow_id: '{{ context.parent_id or context.id }}'
              target:
                entity_id:
                - notify.phone
                - notify.tablet
              data:
                template_message: '{% raw %}Confirmed{% endraw %}'
                confirmation_device_id: '{{ wait.trigger.event.data.device_id | default('''',
                  true) }}'
                confirmation_user_id: '{{ wait.trigger.event.context.user_id | default('''',
                  true) }}'
          - action: ha_notifications.report
            data:
              alert_id: matrix_confirmation_without_reminders
              alert_name: Low water
              flow_id: '{{ context.parent_id or context.id }}'
              status: confirmation_completed
              run_id: '{{ context.parent_id or context.id }}'
              message: Confirmation completed
              details:
                action: confirmation_completed
                device_id: '{{ wait.trigger.event.data.device_id | default('''', true)
                  }}'
                user_id: '{{ wait.trigger.event.context.user_id | default('''', true)
                  }}'
          - stop: confirmation completed
      - action: ha_notifications.report
        data:
          alert_id: matrix_confirmation_without_reminders
          alert_name: Low water
          flow_id: '{{ context.parent_id or context.id }}'
          status: confirmation_timeout
          run_id: '{{ context.parent_id or context.id }}'
          message: Confirmation timed out
          details:
            action: confirmation_timeout
      - action: ha_notifications.report
        data:
          alert_id: matrix_confirmation_without_reminders
          alert_name: Low water
          flow_id: '{{ context.parent_id or context.id }}'
          status: completed
          run_id: '{{ context.parent_id or context.id }}'
          details:
            action: automation_completed
    default:
    - action: ha_notifications.report
      data:
        alert_id: matrix_confirmation_without_reminders
        alert_name: Low water
        flow_id: '{{ context.id }}'
        status: inactive
        message: Condition inactive
        details:
          action: automation_inactive
    - stop: condition inactive
  '''
# ---
# name: test_option_matrix_generates_valid_native_automations[disabled_optional_features-overrides5]
  '''
  id: ha_notifications_matrix_disabled_optional_features
  alias: 'HA Notifications: Low water'
  description: Generated by HA Notifications. Do not edit manually.
  initial_state: true
  mode: single
  triggers:
  - trigger: state
    entity_id: sensor.water
  - trigger: homeassistant
    event: start
  conditions: []
  actions:
  - choose:
    - conditions:
      - condition: numeric_state
        entity_id: sensor.water
        below: 20
      sequence:
      - action: ha_notifications.report
        data:
          alert_id: matrix_disabled_optional_features
          alert_name: Low water
          flow_id: '{{ context.parent_id or context.id }}'
          status: started
          run_id: '{{ context.parent_id or context.id }}'
          details:
            action: automation_started
      - action: ha_notifications.send
        data:
          alert_id: matrix_disabled_optional_features
          alert_name: Low water
          flow_id: '{{ context.parent_id or context.id }}'
          target:
            entity_id:
            - notify.phone
            - notify.tablet
          data:
            message: Low water
      - action: ha_notifications.report
        data:
          alert_id: matrix_disabled_optional_features
          alert_name: Low water
          flow_id: '{{ context.parent_id or context.id }}'
          status: completed
          run_id: '{{ context.parent_id or context.id }}'
          details:
            action: automation_completed
    default:
    - action: ha_notifications.report
      data:
        alert_id: matrix_disabled_optional_features
        alert_name: Low water
        flow_id: '{{ context.id }}'
        status: inactive
        message: Condition inactive
        details:
          action: automation_inactive
    - stop: condition inactive
  '''
# ---
# name: test_option_matrix_generates_valid_native_automations[interval_and_clear-overrides1]
  '''
  id: ha_notifications_matrix_interval_and_clear
  alias: 'HA Notifications: Low water'
  description: Generated by HA Notifications. Do not edit manually.
  initial_state: true
  mode: single
  triggers:
  - trigger: state
    entity_id: sensor.water
  - trigger: homeassistant
    event: start
  - trigger: time_pattern
    minutes: /5
  conditions: []
  actions:
  - choose:
    - conditions:
      - condition: numeric_state
        entity_id: sensor.water
        below: 20
      sequence:
      - action: ha_notifications.report
        data:
          alert_id: matrix_interval_and_clear
          alert_name: Low water
          flow_id: '{{ context.parent_id or context.id }}'
          status: started
          run_id: '{{ context.parent_id or context.id }}'
          details:
            action: automation_started
      - action: ha_notifications.send
        data:
          alert_id: matrix_interval_and_clear
          alert_name: Low water
          flow_id: '{{ context.parent_id or context.id }}'
          target:
            entity_id:
            - notify.phone
            - notify.tablet
          data:
            message: Low water
      - action: ha_notifications.report
        data:
          alert_id: matrix_interval_and_clear
          alert_name: Low water
          flow_id: '{{ context.parent_id or context.id }}'
          status: completed
          run_id: '{{ context.parent_id or context.id }}'
          details:
            action: automation_completed
    default:
    - action: ha_notifications.clear
      data:
        alert_id: matrix_interval_and_clear
        alert_name: Low water
        flow_id: '{{ context.id }}'
        target:
          entity_id:
          - notify.phone
          - notify.tablet
        data:
          message: Low water
  '''
# ---
# name: test_option_matrix_generates_valid_native_automations[post_send_enabled-overrides2]
  '''
  id: ha_notifications_matrix_post_send_enabled
  alias: 'HA Notifications: Low water'
  description: Generated by HA Notifications. Do not edit manually.
  initial_state: true
  mode: single
  triggers:
  - trigger: state
    entity_id: sensor.water
  - trigger: homeassistant
    event: start
  conditions: []
  actions:
  - choose:
    - conditions:
      - condition: numeric_state
        entity_id: sensor.water
        below: 20
      sequence:
      - action: ha_notifications.report
        data:
          alert_id: matrix_post_send_enabled
          alert_name: Low water
          flow_id: '{{ context.parent_id or context.id }}'
          status: started
          run_id: '{{ context.parent_id or context.id }}'
          details:
            action: automation_started
      - action: ha_notifications.send
        data:
          alert_id: matrix_post_send_enabled
          alert_name: Low water
          flow_id: '{{ context.parent_id or context.id }}'
          target:
            entity_id:
            - notify.phone
            - notify.tablet
          data:
            message: Low water
      - action: logbook.log
      - action: ha_notifications.record
        data:
          alert_id: matrix_post_send_enabled
          alert_name: Low water
          flow_id: '{{ context.parent_id or context.id }}'
          details:
            action: logbook.log
      - action: ha_notifications.report
        data:
          alert_id: matrix_post_send_enabled
          alert_name: Low water
          flow_id: '{{ context.parent_id or context.id }}'
          status: completed
          run_id: '{{ context.parent_id or context.id }}'
          details:
            action: automation_completed
    default:
    - action: ha_notifications.report
      data:
        alert_id: matrix_post_send_enabled
        alert_name: Low water
        flow_id: '{{ context.id }}'
        status: inactive
        message: Condition inactive
        details:
          action: automation_inactive
    - stop: condition inactive
  '''
# ---
